ScreenShots and good css

--- a/Part2/bad.html
+++ b/Part2/bad.html
@@ -7,7 +7,11 @@
 </head>
 <body>
 <h1 class="header">Tarek <br/>El Bohtimy</h1>
-
+<div class="centre">
+	<a href="https://google.ca">Home</a>
+	<a href="https://google.ca">More Info</a>
+	<a href="https://google.ca">Contact</a>
+</div>
 <div>
     <ul>
 		<h2>Important Points</h2>
@@ -39,7 +43,7 @@
 		<br/>
 	</ul>
 </div>
-<div class="pink">
+<div class="green">
 	<img class="left"src="images/Tarek.jpg" alt="Picture of me">
 	<img class="right"src="images/Tarek.jpg" alt="me2">
 	<h1>Who am I?</h1>
@@ -66,7 +70,7 @@
 </div>
 <br/>
 <div class="bottom yellow" >
-	<p>Contact Information: elbohtim (at) ualberta dot ca</p>
+	<p>Copyright © Tarek El Bohtimy 2015 </p>
 </div>
 </body>
 </html>
