--- a/Part2/good.html
+++ b/Part2/good.html
@@ -7,7 +7,11 @@
 </head>
 <body>
 <h1 class="header">Tarek <br/>El Bohtimy</h1>
-
+<div class="centre">
+	<a href="https://google.ca">Home</a>
+	<a href="https://google.ca">More Info</a>
+	<a href="https://google.ca">Contact</a>
+</div>
 <div >
     <ul>
 		<h2>Important Points</h2>
@@ -37,9 +41,10 @@
 		<br/>
 		<br/>
 		<br/>
+		<br/>
 	</ul>
 </div>
-<div>
+<div class="margins">
 	<img class="size1" src="images/Tarek.jpg" alt="Picture of me">
 	<h1>Who am I?</h1>
 	<p>Hello, My name is Tarek El Bohtimy, I am 21 years old and I am currently a 4th year computing science student at the University of Alberta expecting to 
@@ -47,17 +52,17 @@
 	programming some of my hobbies are bike riding, playing video games, listening to some tunes, and board games. </p>
 </div>
 <br/>
-<div>
-    <img class="size2" src="images/Tarek.jpg" alt="history">
-	<h1 style="float:left">Professional History</h1>
+<div class="margins">
+    <img class="size2" src="images/professional.jpg" alt="history">
+	<h1>Professional History</h1>
 	<p>Professionally I have made apps for Android devices using Eclipse and Andriod SDK's.  
 	I have made a small image sharing site using java servlets and sqlplus.
 	I've used ettercap and wireshark to do some packet sniffing to receive data, and made firewall rules using IPtables. 
 	Using Matlab I have programmed basic machine learning algorithms</p>
 </div>
 <br/>
-<div>
-	<img class="size1" src="images/Tarek.jpg" alt="gift">
+<div class="margins">
+	<img class="size1" src="images/gift.jpg" alt="gift">
 	<h1>What Can I Offer?</h1>
     <p>With experience in C, java, python, matlab, SQL and many other programming languages and tools
 	I can design and implement an application that will help you in your everyday.  With my critical and abstract thinking I can
@@ -67,7 +72,7 @@
 </div>
 <br/>
 <div class="bottom">
-	<p>Contact Information: elbohtim (at) ualberta dot ca</p>
+	<p>Copyright © Tarek El Bohtimy 2015 </p>
 </div>
 </body>
 </html>
